// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataGrid tests getFilterMarkup should return filter field 1`] = `
<Field
  autoComplete="off"
  className="filter-field"
  clearable={true}
  id="filter"
  kind="secondary"
  leftIcon="search"
  onChange={[Function]}
  placeholder="Search"
  size="normal"
  type="text"
  value=""
/>
`;

exports[`DataGrid tests handleFilterChange should handle change to filter 1`] = `
<Field
  autoComplete="off"
  className="filter-field"
  clearable={true}
  id="filter"
  kind="secondary"
  leftIcon="search"
  onChange={[Function]}
  placeholder="Search"
  size="normal"
  type="text"
  value=""
/>
`;

exports[`DataGrid tests render should render data 1`] = `
<div>
  <Field
    autoComplete="off"
    className="filter-field"
    clearable={true}
    id="filter"
    kind="secondary"
    leftIcon="search"
    onChange={[Function]}
    placeholder="Search"
    size="normal"
    type="text"
    value=""
  />
  <div
    className="panel datagrid"
  >
    <table>
      <thead>
        <tr>
          <th
            key="name"
          >
            Name
          </th>
          <th
            key="email"
          >
            Email
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          className="no-click"
          key="123"
          onClick={[Function]}
        >
          <td
            key="name"
          >
            Dong Nong
          </td>
          <td
            key="email"
          >
            dongnong@nowhere.com
          </td>
        </tr>
        <tr
          className="no-click"
          key="321"
          onClick={[Function]}
        >
          <td
            key="name"
          >
            Juck Gruck
          </td>
          <td
            key="email"
          >
            juckgruck@nowhere.com
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`DataGrid tests render should render loading 1`] = `
<div>
  <Field
    autoComplete="off"
    className="filter-field"
    clearable={true}
    id="filter"
    kind="secondary"
    leftIcon="search"
    onChange={[Function]}
    placeholder="Search"
    size="normal"
    type="text"
    value=""
  />
  <Loading
    content="Loading..."
    kind="primary"
    size="medium"
  />
</div>
`;
